@@ -113,10 +113,10 @@ fun action args id ({pre, pos, log, ...} : Mirabelle.run_args) =
          val {context = ctxt, facts = chained_ths, goal} = Proof.goal pre
          val prover = AList.lookup (op =) args "prover"
                       |> the_default default_prover
-         val {relevance_thresholds, max_relevant, slicing, ...} =
+         val {relevance_thresholds, max_relevant, slice, ...} =
            Sledgehammer_Isar.default_params ctxt args
          val default_max_relevant =
-           Sledgehammer_Provers.default_max_relevant_for_prover ctxt slicing
+           Sledgehammer_Provers.default_max_relevant_for_prover ctxt slice
                                                                 prover
          val is_appropriate_prop =
            Sledgehammer_Provers.is_appropriate_prop_for_prover ctxt
